[workspace]
resolver = "2"
members = ["udptk-cli", "udptk-core"]

[workspace.package]
version = "0.3.1-alpha.1"
readme = "README.md"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
repository = "https://github.com/whisperpine/udptk"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.78.0"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.10"
tracing = "0.1.41"
anyhow = "1.0.95"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"
