[workspace]
resolver = "3"
members = ["udptk-cli", "udptk-core"]

[workspace.package]
version = "0.4.1"
readme = "README.md"
authors = ["Yusong Lai <yusonglai64@gmail.com>"]
repository = "https://github.com/whisperpine/udptk"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.10"
tracing = "0.1.41"
anyhow = "1.0.95"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

# rustc lints (https://doc.rust-lang.org/rustc/lints/index.html)
[workspace.lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
rust-2024-compatibility = { level = "warn", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
deprecated-safe = { level = "deny", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"

# rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html)
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# clippy lints (https://rust-lang.github.io/rust-clippy/master/index.html)
[workspace.lints.clippy]
inefficient_to_string = "warn"
rest_pat_in_fully_bound_structs = "warn"
match_wildcard_for_single_variants = "warn"
fn_params_excessive_bools = "warn"
unnested_or_patterns = "warn"
verbose_file_reads = "warn"
uninlined_format_args = "warn"
needless_continue = "warn"
allow_attributes = "warn"
lossy_float_literal = "warn"
option_option = "warn"
macro_use_imports = "warn"
disallowed_types = "deny"
str_to_string = "warn"
match_on_vec_items = "warn"
suboptimal_flops = "warn"
enum_glob_use = "warn"
filter_map_next = "warn"
imprecise_flops = "warn"
unused_self = "warn"
empty_enum = "warn"
linkedlist = "warn"
mem_forget = "warn"
exit = "warn"
