[package]
name = "udptk"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "A UDP toolkit for debugging purpose"
rust-version.workspace = true

[[bin]]
name = "udptk"
path = "./src/main.rs"

[dependencies]
udptk-core = { path = "../udptk-core", version = "0.3.1-alpha.1" }
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true

[lints]
workspace = true
