[package]
name = "udptk-core"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Core library for udptk cli"

[lib]
name = "udptk"

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
