[package]
name = "udptk-core"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
description = "Core library for udptk cli"

[lib]
name = "udptk"

[dependencies]
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
